Initial class methods for moving snake

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <section class="title-screen">
+        PRESS SPACE TO START
+    </section>
+
     <section class="game-container">
 
     </section>
