Added score functionality. Updates to screen occur on upon death.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         PRESS SPACE TO START
     </section>
 
-    <section class="game-container">
-
+    <section class='game-screen'>
+        <h2>SNAKE</h2>
+        <div class="game-container"></div>
+        <h3 class=score-holder>Score: 0</h3>
     </section>
 
 
