Styled title and game screens. Formatted scripts.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 
 <body>
     <section class="title-screen">
-        PRESS SPACE TO START
+        <h1 id=title>SNAKE</h1>
+        <h2 id=sub-title>PRESS SPACE TO START</h2>
     </section>
 
     <section class='game-screen'>
-        <h2>SNAKE</h2>
+        <h2 class='caption'>SNAKE</h2>
         <div class="game-container"></div>
-        <h3 class=score-holder>Score: 0</h3>
+        <h3 class='score-holder caption'>Score: 0</h3>
     </section>
 
 
